Hero section-About me Completed

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap');
 * {
     font-family: 'Lato', sans-serif;
     padding: 0;
@@ -12,13 +13,35 @@ h1, h2, h3, h4, h5, h6, span {
     line-height: 1.25;
 }
 
+h1 {
+    font-size: 36px;
+}
+
 li{
     list-style: none;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-1 {
+    flex: 1;
 }
 
 p {
     line-height: 1.5;
     font-size: 16px;
+}
+
+.row {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.text--purple {
+    color: #6030b1;
 }
 
 /* NAVIGATION BAR */
@@ -57,9 +80,60 @@ nav {
 }
 
 .personal__logo {
+    font-family: 'Jost', sans-serif;
     font-size: 24px;
-    font-weight: bold;
+    font-weight: bolder;
     color: #6030b1;
     margin: 0 12px;
     font-style: italic;
+}
+
+/* ABOUT ME */
+
+#about-me {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-me__info--container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.about-me__picture--mask {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
+    margin-bottom: 28px;
+}
+
+.about-me__picture {
+    width: 100%;
+
+    /* transforming my own picture */
+
+    transform: scale(1.5);
+    padding-top: 20px;
+}
+
+.about-me__info--title {
+    margin-bottom: 16px;
+}
+.about-me__info--para {
+    font-size: 20px;
+    margin-bottom: 28px;
+}
+
+.about-me__link {
+    font-size: 20px;
+    color: #242424;
+    text-decoration: none;
+    padding: 0 16px;
 }
