--- a/style.css
+++ b/style.css
@@ -96,6 +96,11 @@ nav {
     flex-direction: column;
 }
 
+.about-me__info {
+    display: flex;
+    flex-direction: column;
+}
+
 .about-me__info--container {
     display: flex;
     flex-direction: column;
@@ -137,3 +142,4 @@ nav {
     text-decoration: none;
     padding: 0 16px;
 }
+
