--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ li{
     flex: 1;
 }
 
+.container {
+    padding: 50px 0;
+}
+
 p {
     line-height: 1.5;
     font-size: 16px;
@@ -42,6 +46,14 @@ p {
 
 .text--purple {
     color: #6030b1;
+}
+
+section:nth-child(even) {
+    background-color: #f8f8f8;
+}
+
+.section__title {
+    margin-bottom: 20px;
 }
 
 /* NAVIGATION BAR */
@@ -96,6 +108,11 @@ nav {
     flex-direction: column;
 }
 
+.about-me--info {
+    display: flex;
+    flex-direction: column;
+}
+
 .about-me__info {
     display: flex;
     flex-direction: column;
@@ -143,3 +160,40 @@ nav {
     padding: 0 16px;
 }
 
+.about-me__img--container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+.img--hero {
+    padding-top: 20px;
+    width: 100%;
+}
+
+
+
+/* TECH - STACK */
+
+
+.language__img {
+    width: 100%;
+    max-width: 100px;
+}
+
+.language {
+    width: 25%;
+}
+
+.language__img--wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 16px;
+}
+
+.language__list {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
