--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@ nav {
 
 .project__img {
     width: 100%;
+    transition: all 500ms ease;
 }
 
 .project__wrapper {
@@ -258,6 +259,7 @@ nav {
     background-color: #1c1d25;
     opacity: 0;
     transition: opacity 450ms ease;
+    z-index: 2;
 }
 
 .project:hover .project__wrapper:before{
@@ -267,4 +269,42 @@ nav {
 .project:hover .project__img {
     transform: scale(1.07);
     filter: blur(5px);
+}
+
+
+.project__list {
+    padding-top: 40px;
+}
+
+.project__description {
+    position: absolute;
+    top: 50%;
+    left: 90px;
+    transform: translateY(-50%);
+    max-width: 550px;
+    z-index: 3;
+}
+
+.project__description--title {
+    font-size: 40px;
+}
+
+
+.project__description--para {
+    margin: 16px 0;
+}
+
+
+.project__description--link {
+    font-size: 20px;
+    margin: 16px;
+    text-decoration: none;
+}
+
+.project__description--title,
+.project__description--sub-title,
+.project__description--para 
+.project__description--link {
+    text-align: left;
+    color: #fff;
 }
