--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ nav {
 
 .project__description--title,
 .project__description--sub-title,
-.project__description--para 
+.project__description--para,
 .project__description--link {
     text-align: left;
     color: #fff;
