--- a/style.css
+++ b/style.css
@@ -234,6 +234,13 @@ nav {
 
 /* PROJECT */
 
+.project {
+    margin-bottom: 135px;
+}
+
+.project:last-child {
+    margin-bottom: 40px;
+}
 
 .project__img {
     width: 100%;
@@ -271,6 +278,10 @@ nav {
     filter: blur(5px);
 }
 
+.project:hover .project__description {
+    opacity: 1;
+    transform: translateY(-50%);
+}
 
 .project__list {
     padding-top: 40px;
@@ -280,10 +291,13 @@ nav {
     position: absolute;
     top: 50%;
     left: 90px;
-    transform: translateY(-50%);
+    transform: translateY(100%);
     max-width: 550px;
     z-index: 3;
+    opacity: 0;
+    transition: transform 450ms, opacity 300ms;
 }
+
 
 .project__description--title {
     font-size: 40px;
@@ -297,7 +311,7 @@ nav {
 
 .project__description--link {
     font-size: 20px;
-    margin: 16px;
+    margin-right: 16px;
     text-decoration: none;
 }
 
