--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ p {
     font-size: 16px;
 }
 
+
+a {
+    text-decoration: none;
+}
+
 .row {
     width: 100%;
     max-width: 800px;
@@ -331,6 +336,10 @@ footer {
 }
 
 .footer__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 8% 0;
 }
 
@@ -338,4 +347,9 @@ footer {
 .footer__logo--img {
     width: 70px;
     height: 70px;
+}
+
+.footer__social--link,
+.footer__copyright {
+    color: #fff;
 }
