--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+
 h1, h2, h3, h4, h5, h6, span {
     color: #242424;
     text-align: center;
@@ -41,6 +46,34 @@ p {
 
 a {
     text-decoration: none;
+    position: relative;
+}
+
+.link__hover-effect::after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 0;
+    bottom: -3px;
+    right: 0;
+    transition: all 300ms ease;
+}
+
+
+.link__hover-effect--white:after {
+    background-color: #fff;
+}
+
+
+.link__hover-effect--black:after {
+    background-color: black;
+}
+
+
+
+.link__hover-effect:hover:after {
+    width: 100%;
+    left: 0;
 }
 
 .row {
@@ -335,9 +368,6 @@ footer {
     background-color: #242424;
 }
 
-.footer__logo {
-    margin-bottom: 20px;
-}
 
 .footer__social--list {
     width: 100%;
@@ -362,6 +392,29 @@ footer {
 }
 
 .footer__social--link,
+.footer__logo--popper,
 .footer__copyright {
     color: #fff;
+}
+
+
+.footer__logo--popper {
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+
+.footer__anchor {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+
+.footer__anchor:hover .footer__logo--popper {
+    transform: translateX(60px);
+    opacity: 1;
 }
