--- a/style.css
+++ b/style.css
@@ -217,7 +217,14 @@ nav {
 }
 
 @keyframes fade-up {
-    
+    0% {
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 .about-me__link:hover {
